--- a/orders/templates/orders/assign/unassign-deliveries.html
+++ b/orders/templates/orders/assign/unassign-deliveries.html
@@ -84,7 +84,7 @@
             Detalles del pedido
         </div>
         <div class="order-list-head-item">
-            Dirección de recojo
+            Dirección de envío
         </div>
         <div class="order-list-head-item">
           ¿Quién te atenderá? 
@@ -115,18 +115,18 @@
             </div>
         </div>
         <div class="order-list-col">
-            {% if object.detail.address_origin %}
-            <h6>{{ object.detail.address_origin.address }}</h6>
-            <p>{{ object.detail.address_origin.address_city }}</p>
+            {% if object.detail.address_destiny %}
+            <h6>{{ object.detail.address_destiny.address }}</h6>
+            <p>{{ object.detail.address_destiny.address_city }}</p>
             {% else %}
             <p class="text-small">Dirección no disponible</p>
             {% endif %}
         </div>
         <div class="order-list-col">
-            <h6>{{ object.detail.address_origin.full_name }}</h6>
+            <h6>{{ object.detail.address_destiny.full_name }}</h6>
             <p class="flex items-center">
                 <i class="bx bx-mobile-alt bx-xs" style="margin-right: 5px;"></i>
-                <span>{{ object.detail.address_origin.cell_phone }}</span>
+                <span>{{ object.detail.address_destiny.cell_phone }}</span>
             </p>
         </div>
         <div class="order-list-col">
@@ -141,7 +141,7 @@
                 x-show.transition.in.origin.bottom.right.scale.opacity.400ms.out.origin.top.right.scale.20="isOpenMd"
                 @click.away="isOpenMd = false">
                 {% if perms.details.view_detail %}
-                <a href="{{ detail.origin_map_path }}"
+                <a href="{{ detail.destiny_map_path }}"
                     class="dropdown-item-2">
                     <span>Ver mapa</span>
                     <i class='bx bx-map-pin bx-sm'></i>
@@ -166,7 +166,7 @@
                 <div class="form-modal">
                     <div class="options">
                         {% if perms.details.view_detail %}
-                        <a href="{{ detail.origin_map_path }}" class="option-item">
+                        <a href="{{ detail.destiny_map_path }}" class="option-item">
                             <span>Ver mapa</span>
                             <div class="icon ">
                                 <i class='bx bx-map-pin bx-sm'></i>
