--- a/details/templates/details/snippets/status.html
+++ b/details/templates/details/snippets/status.html
@@ -8,7 +8,7 @@
 <span class="badge badge-secondary">En Ruta</span>
 {% elif detail.status == 'EN' %}
 <span class="badge badge-success">Entregado</span>
-{% elif detail.status == 'NEN'
+{% elif detail.status == 'NEN' %}
 <span class="badge badge-warning">No Entregado</span>
 {% elif detail.status == 'REPR' %}
 <span class="badge badge-success">Reprogramado</span>
