--- a/orders/templates/orders/add-addresses.html
+++ b/orders/templates/orders/add-addresses.html
@@ -126,7 +126,7 @@
                                     <div class="detail-package">
                                         <div class="detail-package__row">
                                           <h6>Tamaño</h6>
-                                          <p>{{ detail.size }}</p>
+                                          <p>{{ detail.get_size_display }}</p>
                                         </div>
                                         <div class="detail-package__row">
                                           <h6>Contenido</h6>
