--- a/orders/templates/orders/assign/origins.html
+++ b/orders/templates/orders/assign/origins.html
@@ -140,17 +140,13 @@
             <div class="dropdown-menu right"
                 x-show.transition.in.origin.bottom.right.scale.opacity.400ms.out.origin.top.right.scale.20="isOpenMd"
                 @click.away="isOpenMd = false">
-                {% if perms.details.view_detail %}
-                <a href="{{ detail.origin_map_path }}"
+                {% if perms.details.view_assignoriginaddress %}
+                <a href="{{ object.detail.origin_map_path }}"
                     class="dropdown-item-2">
                     <span>Ver mapa</span>
                     <i class='bx bx-map-pin bx-sm'></i>
                 </a>
                 {% endif %}
-                <!-- <a href="#" class="dropdown-item-2 text-primary">
-                    <span>Recibido</span>
-                    <i class='bx bx-check-circle bx-sm'></i>
-                </a> -->
             </div>
         </div>
         <div x-show.transition.in.scale.opacity.100ms.out.scale.opacity.100ms="isOpenSm" class="modal modal-sheet">
@@ -165,8 +161,8 @@
                 </div>
                 <div class="form-modal">
                     <div class="options">
-                        {% if perms.details.view_detail %}
-                        <a href="{{ detail.origin_map_path }}" class="option-item">
+                        {% if perms.details.view_assignoriginaddress %}
+                        <a href="{{ object.detail.origin_map_path }}" class="option-item">
                             <span>Ver mapa</span>
                             <div class="icon ">
                                 <i class='bx bx-map-pin bx-sm'></i>
