--- a/courier_app/static/css/pages/admin-content.css
+++ b/courier_app/static/css/pages/admin-content.css
@@ -5,7 +5,7 @@
 }
 /** sidebar **/
 .page-admin .sidebar{
-    width: 255px;
+    min-width: 270px;
     background: var(--bg-secondary-color);
     box-shadow: 0px 3px 16px rgba(0, 0, 0, 0.06);
     padding: 0px 10px;
