--- a/details/templates/details/destiny-map.html
+++ b/details/templates/details/destiny-map.html
@@ -8,7 +8,7 @@
 {% block content_head %}
 <div class="content-head">
     <div class="left">
-        <a href="{% url 'orders:origins' %}" class="btn btn-link btn-small">
+        <a href="{% url 'details:not-onrouted-delivery' pk=detail.pk  %}" class="btn btn-link btn-small">
             <i class='bx bx-left-arrow-alt bx-sm'></i>
         </a>
         <h4>{{ title }}</h4>
@@ -53,12 +53,14 @@
                     <span>{{ detail.address_destiny.cell_phone }}</span>
                 </p>
             </div>
+            {% if not detail.is_delivered and perms.details.add_packagedelivered %}
             <div class="actions full">
-                <button class="btn btn-secondary btn-small btn-rounded">
+                <a href="{% url 'details:package-delivered' pk=detail.pk %}" class="btn btn-secondary btn-small btn-rounded">
                     <i class="bx bx-ckeck-circle bx-sm"></i>
                     <span>Marcar como entregado</span>
-                </button>
+                </a>
             </div>
+            {% endif %}
         </div>
     </div>
 </div>
@@ -103,7 +105,7 @@
         var directionsDisplay = new google.maps.DirectionsRenderer({ 'draggable': false });
         var directionsService = new google.maps.DirectionsService();
         var address = {{ detail.address_destiny| jsonify }}[0];
-        var driver = {{ request.user.driver| jsonify }}[0];
+        var driver = {{ driver| jsonify }}[0];
         var address_origin_text = `${driver.fields.address}, ${driver.fields.district}`;
         var address_destiny_text = `${address.fields.address}, ${address.fields.district}, ${address.fields.city}`;
         var position_driver = driver.fields.address_gps;
@@ -112,7 +114,7 @@
         new google.maps.Marker({
             position: latLng,
             map,
-            title: "Driver direccion",
+            title: "Dirección del motorizado",
             icon: "{% static 'icon/driver-icon.png' %}"
         });
 
